kubernetes/init-ingress-and-clusterissuer/ingress-local.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: spring-petclinic
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "local-prod.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-gateway-prod
                port:
                  number: 8080 # use appropriate port
    - host: "local-stage.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-gateway-stage
                port:
                  number: 8080 # use appropriate port
  tls:
    - hosts:
        - "local-prod.devopshub.org"
        - "local-stage.devopshub.org"
      secretName: spring-petclinic
