kubernetes/init-ingress-and-clusterissuer/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ingress
  namespace: spring-petclinic
  # annotations:
  #   cert-manager.io/cluster-issuer: "letsencrypt-prod"
  #   nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "prod.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-gateway-prod
                port:
                  number: 8080 # use appropriate port
    - host: "stage.devopshub.org"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: api-gateway-stage
                port:
                  number: 8080 # use appropriate port
  # tls:
  #   - hosts:
  #       # - "stage.devopshub.org"
  #       # - "prod.devopshub.org"
  #       - "*.devopshub.org"
  #     secretName: spring-petclinic
